--- a/axiom-nsut/src/components/NavBar.css
+++ b/axiom-nsut/src/components/NavBar.css
@@ -38,8 +38,8 @@
 }
 
 .navbar-heading {
-  font-family: "Orbitron", sans-serif;
-  font-size: 1.8rem;
+  font-family: "Quicksand", sans-serif;
+  font-size: 1.6rem;
   font-weight: 700;
   color: #ffffff;
   text-transform: uppercase;
